[gd_scene load_steps=4 format=2]

[ext_resource path="res://shared/fonts/press_start_2p_18px.tres" type="FontFile" id=2]
[ext_resource path="res://games/snake/snake.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="Snake" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
color = Color( 0.2, 0.2, 0.2, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VC" type="VBoxContainer" parent="CC"]
offset_left = 388.0
offset_right = 636.0
offset_bottom = 600.0
theme_override_constants/separation = 0

[node name="MC" type="MarginContainer" parent="CC/VC"]
offset_right = 248.0
offset_bottom = 80.0
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VC" type="VBoxContainer" parent="CC/VC/MC"]
offset_left = 16.0
offset_top = 16.0
offset_right = 232.0
offset_bottom = 64.0
theme_override_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHighScore" type="Label" parent="CC/VC/MC/VC"]
offset_right = 216.0
offset_bottom = 18.0
text = "Highscore: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScore" type="Label" parent="CC/VC/MC/VC"]
offset_top = 30.0
offset_right = 216.0
offset_bottom = 48.0
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasBackground" type="ColorRect" parent="CC/VC"]
offset_top = 80.0
offset_right = 248.0
offset_bottom = 80.0
color = Color( 0, 0, 0, 1 )
